Plantilla pagina de inicio

--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
               <a class="nav-link" href="about.html">Agenda</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="services.html">Eventos Anteriores</a>
+              <a class="nav-link" href="eventos-anteriores.html">Eventos Anteriores</a>
             </li>
             <li class="nav-item">
               <a class="nav-link" href="contact.html">Sede y Contactos</a>
@@ -98,8 +98,6 @@
     </header>
     <!--Acerca de-->
     <section class="about-us section-padding">
-    <a name="acerca-de"></a>
-
       <div class="jumbotron jumbotron-fluid bg-info">
       <div class="container">
       <h1 class="display-5 text-center text-white"><strong>X Encuentro Centroamericano de Software Libre</strong></h1>
@@ -150,6 +148,43 @@
         </div>
       </div>
       <!-- /.row -->
+    </div>
+    <!-- /.container -->
+
+    <!--Informacion General-->
+  <section class="about-us section-padding">
+      <div class="jumbotron jumbotron-fluid bg-info">
+      <div class="container">
+      <h1 class="display-5 text-center text-white">Informacion General</h1>
+      <div class="row">
+
+        <div class="columns column-3 text-center col-md-3">
+            <div class="textwidget"><img src="img/icon-registro.png"><h3><a href="index.html" class="text-white">Registro</a></h3></div>
+       </div>
+
+        <div class="columns column-3 text-center col-md-3">
+          <div>			<div class="textwidget"><img src="img/icon-mapa.png">
+  <h3><a href="index.html" class="text-white">Cómo llegar</a></h3></div>
+      </div>			</div>
+
+        <div class="columns column-3 text-center col-md-3">
+          <div>			<div class="textwidget"><img src="img/icon-hotel.png">
+  <h3><a href="index.html" class="text-white">Hotel</a></h3></div>
+      </div>			</div>
+
+      <div class="columns column-3 text-center col-md-3">
+        <div>			<div class="textwidget"><img src="img/icon-FAQ.png">
+  <h3><a href="index.html" class="text-white">FAQ</a></h3></div>
+    </div>			</div>
+
+      </div>
+      </div>
+      </div>
+</section>
+
+    <!-- Page Content -->
+    <div class="container">
+
 
       <!-- Portfolio Section -->
       <h2>Portfolio Heading</h2>
@@ -188,63 +223,9 @@
             </div>
           </div>
         </div>
-        <div class="col-lg-4 col-sm-6 portfolio-item">
-          <div class="card h-100">
-            <a href="#"><img class="card-img-top" src="http://placehold.it/700x400" alt=""></a>
-            <div class="card-body">
-              <h4 class="card-title">
-                <a href="#">Project Four</a>
-              </h4>
-              <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam viverra euismod odio, gravida pellentesque urna varius vitae.</p>
-            </div>
-          </div>
-        </div>
-        <div class="col-lg-4 col-sm-6 portfolio-item">
-          <div class="card h-100">
-            <a href="#"><img class="card-img-top" src="http://placehold.it/700x400" alt=""></a>
-            <div class="card-body">
-              <h4 class="card-title">
-                <a href="#">Project Five</a>
-              </h4>
-              <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam viverra euismod odio, gravida pellentesque urna varius vitae.</p>
-            </div>
-          </div>
-        </div>
-        <div class="col-lg-4 col-sm-6 portfolio-item">
-          <div class="card h-100">
-            <a href="#"><img class="card-img-top" src="http://placehold.it/700x400" alt=""></a>
-            <div class="card-body">
-              <h4 class="card-title">
-                <a href="#">Project Six</a>
-              </h4>
-              <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Itaque earum nostrum suscipit ducimus nihil provident, perferendis rem illo, voluptate atque, sit eius in voluptates, nemo repellat fugiat excepturi! Nemo, esse.</p>
-            </div>
-          </div>
-        </div>
       </div>
       <!-- /.row -->
 
-      <!-- Features Section -->
-      <div class="row">
-        <div class="col-lg-6">
-          <h2>Modern Business Features</h2>
-          <p>The Modern Business template by Start Bootstrap includes:</p>
-          <ul>
-            <li>
-              <strong>Bootstrap v4</strong>
-            </li>
-            <li>jQuery</li>
-            <li>Font Awesome</li>
-            <li>Working contact form with validation</li>
-            <li>Unstyled page elements for easy customization</li>
-          </ul>
-          <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Corporis, omnis doloremque non cum id reprehenderit, quisquam totam aspernatur tempora minima unde aliquid ea culpa sunt. Reiciendis quia dolorum ducimus unde.</p>
-        </div>
-        <div class="col-lg-6">
-          <img class="img-fluid rounded" src="http://placehold.it/700x450" alt="">
-        </div>
-      </div>
-      <!-- /.row -->
 
       <hr>
 
@@ -254,7 +235,7 @@
           <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Molestias, expedita, saepe, vero rerum deleniti beatae veniam harum neque nemo praesentium cum alias asperiores commodi.</p>
         </div>
         <div class="col-md-4">
-          <a class="btn btn-lg btn-secondary btn-block" href="#">Call to Action</a>
+          <a class="btn btn-lg btn-secondary btn-block bg-primary" href="#">Registrarme</a>
         </div>
       </div>
 
