Apartado de eventos anteriores

--- a/index.html
+++ b/index.html
@@ -1,6 +1,5 @@
 <!DOCTYPE html>
 <html lang="es">
-
   <head>
 
     <meta charset="utf-8">
@@ -19,43 +18,45 @@
   </head>
 
   <body>
-
     <!-- Barra de Navegacion -->
     <nav class="navbar fixed-top navbar-expand-lg navbar-dark bg-primary fixed-top">
       <div class="container">
-        <a class="navbar-brand" href="index.html">
-          <img src="img/Logo.png" width="70" height="40" class="d-inline-block" alt="">
-          X Encuentro Centroamericano de Software Libre</a>
-          <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
-            <span class="navbar-toggler-icon"></span>
-          </button>
-          <!--Voy aqui-->
-        <div class="collapse navbar-collapse" id="navbarResponsive">
-          <ul class="navbar-nav ml-auto">
-            <li class="nav-item dropdown">
-              <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownPortfolio" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                Participación
-              </a>
-              <div class="dropdown-menu dropdown-menu-right" aria-labelledby="navbarDropdownPortfolio">
-                <a class="dropdown-item" href="portfolio-1-col.html">Registro</a>
-                <a class="dropdown-item" href="portfolio-2-col.html">Logística</a>
-                <a class="dropdown-item" href="portfolio-3-col.html">Preguntas Frecuentes</a>
-              </div>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="about.html">Agenda</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="eventos-anteriores.html">Eventos Anteriores</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="contact.html">Sede y Contactos</a>
-            </li>
-          </ul>
-        </div>
+          <a class="navbar-brand" href="index.html">
+            <img src="img/Logo.png" width="70" height="40" class="d-inline-block" alt="">X Encuentro Centroamericano de Software Libre
+          </a>
+
+          <div class="collapse navbar-collapse" id="navbarResponsive">
+            <ul class="navbar-nav ml-auto">
+
+              <li class="nav-item dropdown">
+                <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownPortfolio" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                  Participación
+                </a>
+                <div class="dropdown-menu dropdown-menu-right" aria-labelledby="navbarDropdownPortfolio">
+                  <a class="dropdown-item" href="portfolio-1-col.html">Registro</a>
+                  <a class="dropdown-item" href="full-width.html">Logística</a>
+                  <a class="dropdown-item" href="faq.html">Preguntas Frecuentes</a>
+                </div>
+              </li>
+
+              <li class="nav-item">
+                <a class="nav-link" href="about.html">Agenda</a>
+              </li>
+
+              <li class="nav-item">
+                <a class="nav-link" href="eventos-anteriores.html">Eventos Anteriores</a>
+              </li>
+
+              <li class="nav-item">
+                <a class="nav-link" href="contact.html">Sede y Contactos</a>
+              </li>
+
+            </ul>
+          </div>
       </div>
     </nav>
 
+    <!-- CARRUSEL SIN TOCAR -->
     <header>
       <div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
         <ol class="carousel-indicators">
@@ -96,13 +97,17 @@
         </a>
       </div>
     </header>
+
     <!--Acerca de-->
     <section class="about-us section-padding">
       <div class="jumbotron jumbotron-fluid bg-info">
-      <div class="container">
-      <h1 class="display-5 text-center text-white"><strong>X Encuentro Centroamericano de Software Libre</strong></h1>
-      <p class="lead text-center text-white">El Encuentro Centroamericano de Software Libre (ECSL) es un evento anual organizado desde el año 2009 por y para la comunidad Software Libre Centroamérica (SLCA). El ECSL es una reunión anual de activistas y miembros de comunidades y grupos de usuarios que sirve como punto de encuentro y espacio de articulación, educación, coordinación e intercambio de ideas para fortalecer acuerdos y formas de trabajo conjuntas que faciliten la promoción del uso y desarrollo del Software Libre en la región.</p>
-      </div>
+        <div class="container">
+          <h1 class="display-5 text-center text-white"><strong>X Encuentro Centroamericano de Software Libre</strong></h1>
+          <p class="lead text-center text-white">El Encuentro Centroamericano de Software Libre (ECSL) es un evento anual organizado desde el año 2009
+            por y para la comunidad Software Libre Centroamérica (SLCA). El ECSL es una reunión anual de activistas y miembros de comunidades y grupos
+            de usuarios que sirve como punto de encuentro y espacio de articulación, educación, coordinación e intercambio de ideas para fortalecer
+            acuerdos y formas de trabajo conjuntas que faciliten la promoción del uso y desarrollo del Software Libre en la región.</p>
+        </div>
       </div>
     </section>
 
@@ -152,35 +157,30 @@
     <!-- /.container -->
 
     <!--Informacion General-->
-  <section class="about-us section-padding">
-      <div class="jumbotron jumbotron-fluid bg-info">
-      <div class="container">
-      <h1 class="display-5 text-center text-white">Informacion General</h1>
-      <div class="row">
+    <section class="about-us section-padding">
+        <div class="jumbotron jumbotron-fluid bg-info">
+          <div class="container">
+            <h1 class="display-5 text-center text-white">Informacion General</h1>
+            <div class="row">
+              <div class="columns column-3 text-center col-md-3">
+                  <div class="textwidget"><img src="img/icon-registro.png"><h3><a href="index.html" class="text-white">Registro</a></h3></div>
+             </div>
 
-        <div class="columns column-3 text-center col-md-3">
-            <div class="textwidget"><img src="img/icon-registro.png"><h3><a href="index.html" class="text-white">Registro</a></h3></div>
-       </div>
+              <div class="columns column-3 text-center col-md-3">
+                  <div class="textwidget"><img src="img/icon-mapa.png"><h3><a href="index.html" class="text-white">Cómo llegar</a></h3></div>
+              </div>
 
-        <div class="columns column-3 text-center col-md-3">
-          <div>			<div class="textwidget"><img src="img/icon-mapa.png">
-  <h3><a href="index.html" class="text-white">Cómo llegar</a></h3></div>
-      </div>			</div>
+              <div class="columns column-3 text-center col-md-3">
+                  <div class="textwidget"><img src="img/icon-hotel.png"><h3><a href="index.html" class="text-white">Hotel</a></h3></div>
+              </div>
 
-        <div class="columns column-3 text-center col-md-3">
-          <div>			<div class="textwidget"><img src="img/icon-hotel.png">
-  <h3><a href="index.html" class="text-white">Hotel</a></h3></div>
-      </div>			</div>
-
-      <div class="columns column-3 text-center col-md-3">
-        <div>			<div class="textwidget"><img src="img/icon-FAQ.png">
-  <h3><a href="index.html" class="text-white">FAQ</a></h3></div>
-    </div>			</div>
-
-      </div>
-      </div>
-      </div>
-</section>
+              <div class="columns column-3 text-center col-md-3">
+                <div class="textwidget"><img src="img/icon-FAQ.png"><h3><a href="index.html" class="text-white">FAQ</a></h3></div>
+              </div>
+            </div>
+          </div>
+        </div>
+  </section>
 
     <!-- Page Content -->
     <div class="container">
@@ -229,10 +229,11 @@
 
       <hr>
 
-      <!-- Call to Action Section -->
+      <!-- Anuncio "Registrarme" -->
       <div class="row mb-4">
         <div class="col-md-8">
-          <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Molestias, expedita, saepe, vero rerum deleniti beatae veniam harum neque nemo praesentium cum alias asperiores commodi.</p>
+          <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Molestias, expedita, saepe, vero rerum deleniti beatae veniam harum
+            neque nemo praesentium cum alias asperiores commodi.</p>
         </div>
         <div class="col-md-4">
           <a class="btn btn-lg btn-secondary btn-block bg-primary" href="#">Registrarme</a>
@@ -242,16 +243,15 @@
     </div>
     <!-- /.container -->
 
-    <!-- Footer -->
+    <!-- Pie de Pagina -->
     <footer class="py-5 bg-primary">
       <div class="container">
-
         <p class="m-0  text-white">
           <img src="img/Logo.png" width="70" height="40" class="d-inline-block" alt="">
-          X Encuentro Centroamericano de Software Libre</p>
+          X Encuentro Centroamericano de Software Libre
+        </p>
         <p class="m-0 text-center text-white">Copyright &copy; ECSL 2018</p>
       </div>
-      <!-- /.container -->
     </footer>
 
     <!-- Bootstrap core JavaScript -->
