--- a/index.html
+++ b/index.html
@@ -175,7 +175,7 @@
               </div>
 
               <div class="columns column-3 text-center col-md-3">
-                <div class="textwidget"><img src="img/icon-FAQ.png"><h3><a href="index.html" class="text-white">FAQ</a></h3></div>
+                <div class="textwidget"><img src="img/icon-FAQ.png"><h3><a href="faq.html" class="text-white">FAQ</a></h3></div>
               </div>
             </div>
           </div>
