--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 
   <body>
     <!-- Barra de Navegacion -->
-    <nav class="navbar fixed-top navbar-expand-lg navbar-dark bg-primary fixed-top">
+    <nav class="navbar fixed-top navbar-expand-lg navbar-dark bg-info fixed-top">
       <div class="container">
           <a class="navbar-brand" href="index.html">
             <img src="img/Logo.png" width="70" height="40" class="d-inline-block" alt="">X Encuentro Centroamericano de Software Libre
@@ -125,7 +125,7 @@
               <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sapiente esse necessitatibus neque.</p>
             </div>
             <div class="card-footer">
-              <a href="#" class="btn btn-primary">Learn More</a>
+              <a href="#" class="btn btn-info">Learn More</a>
             </div>
           </div>
         </div>
@@ -136,7 +136,7 @@
               <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Reiciendis ipsam eos, nam perspiciatis natus commodi similique totam consectetur praesentium molestiae atque exercitationem ut consequuntur, sed eveniet, magni nostrum sint fuga.</p>
             </div>
             <div class="card-footer">
-              <a href="#" class="btn btn-primary">Learn More</a>
+              <a href="#" class="btn btn-info">Learn More</a>
             </div>
           </div>
         </div>
@@ -147,7 +147,7 @@
               <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sapiente esse necessitatibus neque.</p>
             </div>
             <div class="card-footer">
-              <a href="#" class="btn btn-primary">Learn More</a>
+              <a href="#" class="btn btn-info">Learn More</a>
             </div>
           </div>
         </div>
@@ -236,7 +236,7 @@
             neque nemo praesentium cum alias asperiores commodi.</p>
         </div>
         <div class="col-md-4">
-          <a class="btn btn-lg btn-secondary btn-block bg-primary" href="#">Registrarme</a>
+          <a class="btn btn-lg btn-secondary btn-block bg-info" href="#">Registrarme</a>
         </div>
       </div>
 
@@ -244,7 +244,7 @@
     <!-- /.container -->
 
     <!-- Pie de Pagina -->
-    <footer class="py-5 bg-primary">
+    <footer class="py-5 bg-info">
       <div class="container">
         <p class="m-0  text-white">
           <img src="img/Logo.png" width="70" height="40" class="d-inline-block" alt="">
