--- a/logistica.html
+++ b/logistica.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="es">
+<html lang="en">
 
   <head>
 
@@ -8,7 +8,7 @@
     <meta name="description" content="">
     <meta name="author" content="">
 
-    <title>FAQ-ECSL-2018</title>
+    <title>Logística ECSL-2018</title>
 
     <!-- Bootstrap core CSS -->
     <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
@@ -61,70 +61,51 @@
     <!-- Page Content -->
     <div class="container">
 
-      <!-- Encabezado de pagina -->
-      <h1 class="mt-4 mb-3">Preguntas Frecuentes</h1>
+      <!-- Page Heading/Breadcrumbs -->
+      <h1 class="mt-4 mb-3">Logística</h1>
 
-      <!-- Barra de Ubicacion -->
       <ol class="breadcrumb">
         <li class="breadcrumb-item">
           <a href="index.html">Inicio</a>
         </li>
-        <li class="breadcrumb-item active">FAQ</li>
+        <li class="breadcrumb-item active">Logística</li>
       </ol>
 
+      <!-- Content Row -->
+      <div class="row">
+        <!-- Sidebar Column -->
+        <div class="col-lg-3 mb-4">
+          <div id="list-example" class="list-group">
+            <a class="list-group-item list-group-item-action" href="#list-item-1">Item 1</a>
+            <a class="list-group-item list-group-item-action" href="#list-item-2">Item2</a>
+            <a class="list-group-item list-group-item-action" href="#list-item-3">Item 3</a>
+            <a class="list-group-item list-group-item-action" href="#list-item-4">Item 4</a>
 
-      <!-- Preguntas Frecuentes -->
-      <div class="mb-4" id="accordion" role="tablist" aria-multiselectable="true">
-        <!-- Pregunta #1 -->
-        <div class="card">
-          <div class="card-header" role="tab" id="One">
-            <h5 class="mb-0">
-              <a data-toggle="collapse" data-parent="#accordion" href="#collapseOne" aria-expanded="true" aria-controls="collapseOne">¿Qué es ECSL?</a>
-            </h5>
-          </div>
-
-          <div id="collapseOne" class="collapse show" role="tabpanel" aria-labelledby="One">
-            <div class="card-body">
-              El Encuentro Centroamericano de Software Libre, es un evento organizado por la comunidad Software Libre Centroamérica
-              (SLCA) y se trata de un espacio de articulación, coordinación e intercambio de ideas entre las comunidades de Software
-              Libre que integran la SLCA para fortalecer acuerdos y formas de trabajo conjuntas que faciliten la promoción del uso y
-              desarrollo del Software Libre en la región.
-            </div>
           </div>
         </div>
 
-        <!-- Pregunta #2 -->
-        <div class="card">
-          <div class="card-header" role="tab" id="Two">
-            <h5 class="mb-0">
-              <a class="collapsed" data-toggle="collapse" data-parent="#accordion" href="#collapseTwo" aria-expanded="false" aria-controls="collapseOne">¿En qué fecha se realizará el ECSL?</a>
-            </h5>
-          </div>
+        <!-- Content Column -->
+        <div class="col-lg-9 mb-4">
 
-          <div id="collapseTwo" class="collapse" role="tabpanel" aria-labelledby="Two">
-            <div class="card-body">
-              El Encuentro Centroamericano de Software Libre 2018 se realizará...
-            </div>
-          </div>
-        </div>
-
-        <!-- Pregunta #3 -->
-        <div class="card">
-          <div class="card-header" role="tab" id="Three">
-            <h5 class="mb-0">
-              <a class="collapsed" data-toggle="collapse" data-parent="#accordion" href="#collapseThee" aria-expanded="false" aria-controls="collapseOne">¿Cuales serán los temas a tratar en el evento?</a>
-            </h5>
-          </div>
-
-          <div id="collapseThee" class="collapse" role="tabpanel" aria-labelledby="Thee">
-            <div class="card-body">
-              Holas...
-            </div>
-          </div>
-        </div>
-
-
+              <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Soluta, et temporibus, facere perferendis
+                veniam beatae non debitis, numquam blanditiis necessitatibus vel mollitia dolorum laudantium, voluptate
+               dolores iure maxime ducimus fugit.Quis anim sit do amet fugiat dolor velit sit ea ea do reprehenderit
+               culpa duis. Nostrud aliqua ipsum fugiat minim proident occaecat excepteur aliquip culpa aute tempor
+               reprehenderit. Deserunt tempor mollit elit ex pariatur dolore velit fugiat mollit culpa irure ullamco
+               veniam beatae non debitis, numquam blanditiis necessitatibus vel mollitia dolorum laudantium, voluptate
+              dolores iure maxime ducimus fugit.Quis anim sit do amet fugiat dolor velit sit ea ea do reprehenderit
+              culpa duis. Nostrud aliqua ipsum fugiat minim proident occaecat excepteur aliquip culpa aute tempor
+              reprehenderit. Deserunt tempor mollit elit ex pariatur dolore velit fugiat mollit culpa irure ullamco
+              veniam beatae non debitis, numquam blanditiis necessitatibus vel mollitia dolorum laudantium, voluptate
+             dolores iure maxime ducimus fugit.Quis anim sit do amet fugiat dolor velit sit ea ea do reprehenderit
+             culpa duis. Nostrud aliqua ipsum fugiat minim proident occaecat excepteur aliquip culpa aute tempor
+             reprehenderit. Deserunt tempor mollit elit ex pariatur dolore velit fugiat mollit culpa irure ullamco
+                 veniam beatae non debitis, numquam blanditiis necessitatibus vel mollitia dolorum laudantium, voluptate
+                dolores iure maxime ducimus fugit.</p>
+                </div>
       </div>
+      <!-- /.row -->
+
 
     </div>
     <!-- /.container -->
