--- a/eventos-anteriores.html
+++ b/eventos-anteriores.html
@@ -36,8 +36,8 @@
               </a>
               <div class="dropdown-menu dropdown-menu-right" aria-labelledby="navbarDropdownPortfolio">
                 <a class="dropdown-item" href="portfolio-1-col.html">Registro</a>
-                <a class="dropdown-item" href="portfolio-2-col.html">Logística</a>
-                <a class="dropdown-item" href="portfolio-3-col.html">Preguntas Frecuentes</a>
+                <a class="dropdown-item" href="logistica.html">Logística</a>
+                <a class="dropdown-item" href="faq.html">Preguntas Frecuentes</a>
               </div>
             </li>
 
