--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
                 </a>
                 <div class="dropdown-menu dropdown-menu-right" aria-labelledby="navbarDropdownPortfolio">
                   <a class="dropdown-item" href="portfolio-1-col.html">Registro</a>
-                  <a class="dropdown-item" href="full-width.html">Logística</a>
+                  <a class="dropdown-item" href="logistica.html">Logística</a>
                   <a class="dropdown-item" href="faq.html">Preguntas Frecuentes</a>
                 </div>
               </li>
