--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="es">
+
   <head>
 
     <meta charset="utf-8">
@@ -18,8 +19,9 @@
   </head>
 
   <body>
+
     <!-- Barra de Navegacion -->
-    <nav class="navbar fixed-top navbar-expand-lg navbar-dark bg-info fixed-top">
+    <nav class="navbar fixed-top navbar-expand-lg navbar-dark bg-dark fixed-top">
       <div class="container">
           <a class="navbar-brand" href="index.html">
             <img src="img/Logo.png" width="70" height="40" class="d-inline-block" alt="">X Encuentro Centroamericano de Software Libre
@@ -100,7 +102,7 @@
 
     <!--Acerca de-->
     <section class="about-us section-padding">
-      <div class="jumbotron jumbotron-fluid bg-info">
+      <div class="jumbotron jumbotron-fluid bg-dark">
         <div class="container">
           <h1 class="display-5 text-center text-white"><strong>X Encuentro Centroamericano de Software Libre</strong></h1>
           <p class="lead text-center text-white">El Encuentro Centroamericano de Software Libre (ECSL) es un evento anual organizado desde el año 2009
@@ -125,7 +127,7 @@
               <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sapiente esse necessitatibus neque.</p>
             </div>
             <div class="card-footer">
-              <a href="#" class="btn btn-info">Learn More</a>
+              <a href="#" class="btn btn-primary">Learn More</a>
             </div>
           </div>
         </div>
@@ -136,7 +138,7 @@
               <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Reiciendis ipsam eos, nam perspiciatis natus commodi similique totam consectetur praesentium molestiae atque exercitationem ut consequuntur, sed eveniet, magni nostrum sint fuga.</p>
             </div>
             <div class="card-footer">
-              <a href="#" class="btn btn-info">Learn More</a>
+              <a href="#" class="btn btn-primary">Learn More</a>
             </div>
           </div>
         </div>
@@ -147,7 +149,7 @@
               <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sapiente esse necessitatibus neque.</p>
             </div>
             <div class="card-footer">
-              <a href="#" class="btn btn-info">Learn More</a>
+              <a href="#" class="btn btn-primary">Learn More</a>
             </div>
           </div>
         </div>
@@ -156,9 +158,10 @@
     </div>
     <!-- /.container -->
 
+
     <!--Informacion General-->
     <section class="about-us section-padding">
-        <div class="jumbotron jumbotron-fluid bg-info">
+        <div class="jumbotron jumbotron-fluid bg-dark">
           <div class="container">
             <h1 class="display-5 text-center text-white">Informacion General</h1>
             <div class="row">
@@ -180,7 +183,8 @@
             </div>
           </div>
         </div>
-  </section>
+    </section>
+
 
     <!-- Page Content -->
     <div class="container">
@@ -236,7 +240,7 @@
             neque nemo praesentium cum alias asperiores commodi.</p>
         </div>
         <div class="col-md-4">
-          <a class="btn btn-lg btn-secondary btn-block bg-info" href="#">Registrarme</a>
+          <a class="btn btn-lg btn-secondary btn-block bg-dark" href="#">Registrarme</a>
         </div>
       </div>
 
@@ -244,7 +248,7 @@
     <!-- /.container -->
 
     <!-- Pie de Pagina -->
-    <footer class="py-5 bg-info">
+    <footer class="py-5 bg-dark">
       <div class="container">
         <p class="m-0  text-white">
           <img src="img/Logo.png" width="70" height="40" class="d-inline-block" alt="">
