--- a/faq.html
+++ b/faq.html
@@ -21,7 +21,7 @@
   <body>
 
     <!-- Barra de Navegacion -->
-    <nav class="navbar fixed-top navbar-expand-lg navbar-dark bg-primary fixed-top">
+    <nav class="navbar fixed-top navbar-expand-lg navbar-dark bg-dark fixed-top">
       <div class="container">
           <a class="navbar-brand" href="index.html">
             <img src="img/Logo.png" width="70" height="40" class="d-inline-block" alt="">X Encuentro Centroamericano de Software Libre
@@ -130,7 +130,7 @@
     <!-- /.container -->
 
     <!-- Pie de Pagina -->
-    <footer class="py-5 bg-primary">
+    <footer class="py-5 bg-dark">
       <div class="container">
         <p class="m-0  text-white">
           <img src="img/Logo.png" width="70" height="40" class="d-inline-block" alt="">
